# ip_marketplace_org

./: .env.example  AUTHENTICATION_SETUP.md  CONFIGURATION_GUIDE.md  Cargo.toml  FRONTEND_IMPLEMENTATION_SUMMARY.md  README.md  SETUP_CHECKLIST.md  backend.md  check-env.sh  debug-canister.sh  dfx.json  fronted.md  package-lock.json  package.json  start-dev.sh  start-frontend.sh
src/ip_market_backend/: Cargo.toml  ip_market_backend.did
src/ip_market_backend/src/: ip_registry.rs  lib.rs  marketplace.rs  nft_management.rs  storage.rs  types.rs  user_management.rs  utils.rs
src/ip_market_backend/src/api/: admin.rs  ip.rs  marketplace.rs  nft.rs  users.rs
src/ip_market_frontend/: index.html  package.json  vite.config.js
src/ip_market_frontend/src/: App.jsx  env-test.js  main.jsx
src/ip_market_frontend/src/components/: ConfigurationPanel.jsx  DevelopmentHelper.jsx  IdentityLogin.jsx  IdentityLogin.tsx  ImageUploadComponent.jsx  MarketplaceStats.jsx  NFTCard.jsx  Navbar.jsx  RegisterIP.jsx  TestBackendConnection.jsx
src/ip_market_frontend/src/context/: AuthProvider.jsx
src/ip_market_frontend/src/hooks/: useIPService.js
src/ip_market_frontend/src/pages/: BidNFT.jsx  BuyNFT.jsx  Dashboard.jsx  EditProfile.jsx  IPSearch.jsx  ListNFTForSale.jsx  Login.jsx  MarketPlace.jsx  MintNFT.jsx  NFTDetails.jsx  NFTExplorer.jsx  PlaceBid.jsx  Register.jsx  SelectNFTToList.jsx  UserProfile.jsx
src/ip_market_frontend/src/utils/: config.js  formatters.js  pinataUpload.js
