[package]
name = "ip_market_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

[dependencies.getrandom]
version = "0.2"
features = ["custom"]

# For testing
[dev-dependencies]
tokio = { version = "1", features = ["full"] }